--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="{{ ASSET_PATH }}/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="{{ ASSET_PATH }}/css/style.css" rel="stylesheet">
   
     <!--[if lt IE 9]>
       <script src="{{ ASSET_PATH }}/resources/respond/Respond.min.js"></script>
@@ -16,7 +18,8 @@
 
     <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
-
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/site.js"></script>
   </head>
 
   <body>
@@ -42,18 +45,44 @@
       </div>
     </nav>
     <div class="container">
-      {{ content }}
-      <hr>
-      <footer>
-        <p>
-          &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-          <span class="pull-right text-muted">
-            powered by
-            <a href="http://dbtek.github.io/jekyll-bootstrap-3" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll-Bootstrap-3</a>
-            and <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap 3.0.3</a>
-          </span>
-        </p>
-      </footer>
+      <div class="row">
+        <div class="col-md-9">
+          {{ content }}
+          <hr>
+          <footer>
+            <p>
+              &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
+              <span class="pull-right text-muted">
+                powered by
+                <a href="http://dbtek.github.io/jekyll-bootstrap-3" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll-Bootstrap-3</a>
+                and <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap 3.0.3</a>
+              </span>
+            </p>
+          </footer>
+        </div>
+        <div class="col-md-3">
+          <div id="profile-anchor"></div>
+          <div id="profile" class="well">
+            <img src="{{ ASSET_PATH }}/img/lance-woodson.jpg"/>
+            <h2>Lance Woodson</h2>
+            <h4>Dev + Ops + Data</h4>
+            <hr/>
+            Contact
+            <a href="http://www.linkedin.com/pub/lance-woodson/23/747/503"><i class="fa fa-linkedin-square"></i></a>
+            &#160;
+            <a href="https://twitter.com/LanceWoodson"><i class="fa fa-twitter-square"></i></a>
+            &#160;
+            <a href="mailto:lance@webmaneuvers.com"><i class="fa fa-envelope"></i></a>
+            <br/>
+            View
+            &#160;
+            <a href="http://stackexchange.com/users/1804263/lance-woodson"><i class="fa fa-stack-exchange"></i></a>
+            <a href="http://jsfiddle.net/user/lwoodson/fiddles/"><i class="fa fa-jsfiddle"></i></a>
+            &#160;
+            <a href="https://github.com/lwoodson"><i class="fa fa-github"></i></a>
+          </div>
+        </div>
+      </div>
     </div>
 
     {% include JB/analytics %}
