--- a/assets/themes/bootstrap/css/style.css
+++ b/assets/themes/bootstrap/css/style.css
@@ -69,6 +69,11 @@
   top: 0;
   z-index: 10000; }
 
+body {
+  background-image: url(../img/blog_background.png);
+  background-color: #313131;
+}
+
 #profile {
   line-height: 1.3;
 }
@@ -90,4 +95,29 @@
 }
 #profile i {
   margin-right: 10px;
+}
+.navbar-default {
+  background-color: #428bca;
+  color: #fdfdfd;
+  border-color: #111111;
+}
+.navbar-default .navbar-brand {
+  font-weight: bold;
+  color: #fdfdfd;
+}
+
+.panel {
+  border-width: 0px;
+}
+.panel-default > .panel-heading {
+  background-color: #428bca;
+  color: #fdfdfd;
+}
+.panel-body {
+  padding: 30px;
+  letter-spacing: 0.3px;
+  line-height: 1.2em;
+}
+.panel-body p {
+  padding: 0 0 1.2em;
 }
