--- a/assets/themes/bootstrap/css/style.css
+++ b/assets/themes/bootstrap/css/style.css
@@ -69,9 +69,11 @@
   top: 0;
   z-index: 10000; }
 
+@import url(http://fonts.googleapis.com/css?family=Nunito);
 body {
   background-image: url(../img/blog_background.png);
   background-color: #313131;
+  font-family: 'Nunito Light', sans-serif;
 }
 
 #profile {
@@ -120,4 +122,7 @@ body {
 }
 .panel-body p {
   padding: 0 0 1.2em;
+  font-size: 16px;
+  line-height: 24px;
+  word-spacing: 2px;
 }
