--- a/assets/themes/bootstrap/css/style.css
+++ b/assets/themes/bootstrap/css/style.css
@@ -126,3 +126,14 @@ body {
   line-height: 24px;
   word-spacing: 2px;
 }
+img {
+  max-width: 100%;
+}
+ul, ol {
+  margin-bottom: 24px;
+}
+li {
+  font-size: 16px;
+  line-height: 24px;
+  word-spacing: 2px;
+}
