--- a/_includes/themes/bootstrap/post.html
+++ b/_includes/themes/bootstrap/post.html
@@ -75,7 +75,7 @@
           <div id="profile" class="well">
             <img src="{{ ASSET_PATH }}/img/lance-woodson.jpg"/>
             <h2>Lance Woodson</h2>
-            <h4>Dev + Ops + Data</h4>
+            <h4>Dev + Data + DevOps</h4>
             <hr/>
             Contact
             <a href="http://www.linkedin.com/pub/lance-woodson/23/747/503"><i class="fa fa-linkedin-square"></i></a>
